--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.3"
+    "@astrojs/tailwind": "^5.1.4",
+    "@tailwindcss/typography": "^0.5.15",
+    "astro": "^5.1.3",
+    "monaco-editor": "^0.52.2",
+    "tailwindcss": "^3.4.17"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.23"
   }
 }
